--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev": "next dev",
     "postinstall": "npx prisma generate",
-    "dbpush": "npx prisma db push",
+    "dbpush": "npx prisma validate && npx prisma db push",
     "studio": "npx prisma studio",
     "start": "next start"
   },
