--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
