--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,10 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs",
-    "prisma/data.js",
-    "prisma/seed.js",
-    "prisma/data.factory.js"
+    "**/*.mjs"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "prisma/data.js", "prisma/seed.js", "prisma/data.factory.js"]
 }
