--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@trpc/server": "^10.26.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.259.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
