--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "tabWidth": 2,
   "proseWrap": "preserve",
-  "printWidth": 100
+  "printWidth": 100,
+  "semi": false
 }
