--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,8 @@ EMAIL_SERVER_PORT=""
 EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 
+EMAIL_DEVELOPER=""
+
+
 GOOGLE_CLIENT_SECRET=""
 GOOGLE_CLIENT_ID=""
