feat: enable edit for foreign keys on dialogs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     "**/*.mjs",
     "src/components/table/colums"
   ],
-  "exclude": ["node_modules", "prisma/data.js", "prisma/seed.js", "prisma/data.factory.js"]
+  "exclude": ["node_modules", "scripts/data.js"]
 }
