--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL=''
+#"mysql://root@127.0.0.1:<PORT>/<DATABASE_NAME>"
 
 # Next Auth
 # You can generate a new secret on the command line with:
@@ -20,7 +21,6 @@ EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 
 EMAIL_DEVELOPER=""
-
 
 GOOGLE_CLIENT_SECRET=""
 GOOGLE_CLIENT_ID=""
